--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "bootstrap": "^4.1.3",
-    "bootstrap-vue": "^2.0.0",
+    "bootstrap-vue": "^2.13.1",
     "nuxt": "^2.0.0",
     "swiper": "^5.3.8",
     "vue-awesome": "^4.0.2",
-    "vue-awesome-swiper": "^4.1.1"
+    "vue-awesome-swiper": "^4.1.1",
+    "vuex-persist": "^2.2.0",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.10.0",
