feature(course form): add form to each course and add meta tags to course page

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "starters-africa-nuxt",
   "version": "1.0.0",
-  "description": "My delightful Nuxt.js project",
+  "description": "Starters Africa Website",
   "author": "Richard Saseun",
   "private": true,
   "scripts": {
