--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starters-africa-nuxt",
+  "name": "starters-africa",
   "version": "1.0.0",
   "description": "Starters Africa Website",
   "author": "Richard Saseun",
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/sitemap": "^2.3.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.13.1",
     "nuxt": "^2.0.0",
