chore(blog page): add blog page and connect to wordpress API

--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "swiper": "^5.3.8",
     "vue-awesome": "^4.0.2",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-social-sharing": "^3.0.0-beta.11",
     "vue-tawk": "^1.0.1",
     "vuex-persist": "^2.2.0",
     "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@nuxtjs/google-analytics": "^2.2.3",
+    "@nuxtjs/moment": "^1.6.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "node-sass": "^4.14.1",
